[tool.poetry]
name = "playwright-tutorial"
version = "0.1.0"
description = ""
authors = ["csestelo <sestelos@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
playwright = "^1.44.0"
pytest = "^8.2.2"
pytest-playwright = "^0.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
